AC works now ,null error fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="num">
                 <div class="row1">
-                    <button>AC</button>
+                    <button onclick="reset()">AC</button>
                     <button>B</button>
                     <button onclick="cal('/')" style="background-color: #045baf;font-size: larger;">/</button>
                 </div>
